# jelly-evolution-simulator

./: enums.py  jes.py  jes_sim.py  jes_ui.py  pyproject.toml  utils.py
application/: jes_sim.py  sim.py  species_info.py
config/: sim_config.json  ui_config.json
domain/: creature.py  jes_creature.py
inbound_adapters/pygame_ui/: button.py  dataviz.py  jes_button.py  jes_dataviz.py  jes_ui.py  shapes.py  slider.py  ui.py  ui_creature.py
